welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
  if (weekday == false || vacantion == true) {
    return true
  } else {
    return Nil
  }
}